<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff8f8f8"
    android:orientation="vertical"
    tools:context=".ui.ShopDetailActivity">

    <include layout="@layout/base_topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:background="@color/color_ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_shop_detail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_shop_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textColor="@color/color_3f3f3f"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_weight="1"
            android:text="@string/shop_detail_type"
            android:textColor="@color/color_7a7a7a"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_shop_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:textColor="@color/color_222222"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="14dp"
        android:background="@color/color_ffeeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_weight="1"
            android:text="@string/shop_detail_address"
            android:textColor="@color/color_7a7a7a"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_shop_detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:textColor="@color/color_222222"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="14dp"
        android:background="@color/color_ffeeeeee" />

    <LinearLayout
        android:id="@+id/ll_shop_detail_phone"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12sp"
            android:layout_weight="1"
            android:text="@string/shop_detail_phone"
            android:textColor="@color/color_7a7a7a"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_shop_detail_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textColor="@color/color_222222"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/ic_entrance_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_shop_detail"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@color/color_ffffff"
        android:gravity="center"
        android:text="@string/shop_detail_report"
        android:textColor="@color/color_F3B05C"
        android:textSize="16sp" />

</LinearLayout>