<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gz0101.hzwy.hourglass.ui.HourglassSearchActivity">

    <LinearLayout
        android:id="@+id/hourglass_search_find_ll"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_ffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:background="@drawable/find_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_search" />

            <EditText
                android:id="@+id/find_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_find"
                android:textColor="@color/color_222222"
                android:textColorHint="@color/color_cccccc"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/hourglass_search_delete_text_ll"
                android:layout_width="34dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_trash"
                    android:visibility="invisible" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/hourglass_search_delete_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/base_dialog_right"
                android:textColor="@color/color_222222"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hourglass_search_no_result_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="217dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_no_result"
            android:textColor="@color/color_222222"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_change_text"
            android:textColor="@color/color_adadad"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>
